# github-streak-stats

./: Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: args.rs  main.rs  types.rs
lib/: Cargo.toml  graphql.config.yml
lib/graphql/: streak.graphql  user.graphql  viewer.graphql
lib/src/: github_client.rs  lib.rs  types.rs
