[package]
name = "github-streak-stats-cli"
version = "1.7.1"
edition = "2021"
description = "Show GitHub contribution streak. Export `GITHUB_TOKEN` environment variable with your GitHub personal access token which has `read:user` scope."

[[bin]]
name = "github-streak-stats"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.86"
# Command line arguments parser
clap = { version = "4.5.15", features = ["derive", "env", "wrap_help"] }

# Colors for terminal output
colorful = "0.3.2"

# GitHub API client
github-streak-stats-lib = { version = "0.5.0", path = "../lib" }

# Date and time
jiff = "0.1.5"

# Pretty-printing table in terminal
term-table = "1.4.0"
