[package]
name = "github-streak-stats-cli"
version = "1.9.0"
edition = "2021"
description = "Show GitHub contribution streak. Export `GITHUB_TOKEN` environment variable with your GitHub personal access token which has `read:user` scope."

[[bin]]
name = "github-streak-stats"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
jiff = { workspace = true }

# Command line arguments parser
clap = { version = "4.5.23", features = ["derive", "env", "wrap_help"] }

# Colors for terminal output
colorful = "0.3.2"

# Detect terminal theme
termbg = "0.6.1"

# Pretty-printing table in terminal
term-table = "1.4.0"

github-streak-stats-lib = { version = "0.6.0", path = "../lib" }

tokio = { version = "1.42.0", features = ["rt-multi-thread", "macros"] }
