[package]
name = "github-streak-stats-lib"
version = "0.5.2"
edition = "2021"
description = "A library for fetching GitHub streak stats."

[dependencies]
anyhow = { workspace = true }
jiff = { workspace = true }

# Fetching data from GitHub GraphQL API
graphql_client = { version = "0.14", features = ["reqwest-blocking", "reqwest-rustls"] }

# HTTP client
# pin the version to v0.11 until https://github.com/graphql-rust/graphql-client/pull/490 is merged
reqwest = { version = "0.11", features = ["blocking"] }

# Ser/de-serialization
serde = "1.0"
serde_json = "1.0"
