[package]
name = "github-streak-stats-lib"
version = "0.6.0"
edition = "2021"
description = "A library for fetching GitHub streak stats."

[dependencies]
anyhow = { workspace = true }
jiff = { workspace = true }

# Fetching data from GitHub GraphQL API
graphql_client = { git = "https://github.com/graphql-rust/graphql-client", rev = "9b91a7f7d4a21dbbeacf974bce63fe5e55620ca8", features = ["reqwest-rustls"] }

# HTTP client
# pin the version to v0.11 until https://github.com/graphql-rust/graphql-client/pull/490 is merged
reqwest = { version = "0.12", features = ["blocking"] }

# Ser/de-serialization
serde = "1.0"
serde_json = "1.0"

# Async runtime
tokio = { version = "1.42.0", features = ["test-util"] }
